Introduce `AutoCloseable` for better resource management in tests. Replace deprecated `Collectors.toList()` with `toList()`. Minor adjustments across test and main code for consistency and readability.