@@ -1,5 +1,7 @@
 package ludo.mentis.aciem.tabellarius.controller;
 
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.validation.Valid;
 import ludo.mentis.aciem.tabellarius.model.AttachmentDTO;
 import ludo.mentis.aciem.tabellarius.model.MessageDTO;
 import ludo.mentis.aciem.tabellarius.service.EmailService;
@@ -13,10 +15,7 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.multipart.MultipartFile;
 
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 public class PostmanController {
@@ -47,7 +46,7 @@ public class PostmanController {
         if (files != null && !files.isEmpty()) {
             var attachmentDTOs = files.stream()
                     .map(AttachmentDTO::new)
-                    .collect(Collectors.toList());
+                    .toList();
             messageDTO.setAttachments(attachmentDTOs);
         }
         var senderIp = request.getRemoteAddr();
